logs/Slang/generated/hdlconv/hdlconvertor_p94.sv.log
name: hdlconvertor_p94
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2012/p94.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2012/p94.sv:9:15: error: language feature not yet supported
    parameter type t_3 = int;
              ^~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2012/p94.sv:9:26: error: expected expression
    parameter type t_3 = int;
                         ^~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2012/p94.sv:10:15: error: language feature not yet supported
    parameter type t_4 = int;
              ^~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2012/p94.sv:10:26: error: expected expression
    parameter type t_4 = int;
                         ^~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2012/p94.sv:14:5: error: 't_3' is not a type
    t_3 v3; 
    ^~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2012/p94.sv:15:5: error: 't_4' is not a type
    t_4 v4; 
    ^~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2012/p94.sv:21:16: error: 't_6' does not refer to a value
    sub #(.t_3(t_6)) s1 ();
               ^~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2012/p94.sv:22:16: error: 't_6' does not refer to a value
    sub #(.t_3(t_6)) s2 ();
               ^~~
